프로필 박스 색상 회색으로 변경

--- a/css/html_css_pratice.css
+++ b/css/html_css_pratice.css
@@ -10,7 +10,7 @@
             overflow: hidden;
             border: 1px solid #000;
             border-radius: 4px;
-            background-color: #ffc6c6;
+            background-color: #f6f6f6;
             width: 426px;
             box-sizing:border-box;
             align-items: center;
