--- a/css/html_css_pratice.css
+++ b/css/html_css_pratice.css
@@ -25,7 +25,7 @@
             border-radius:50%;
         }
         .info{
-            flex:1;
+            flex-grow:1;
         }
         strong{
             font-size: 20px;
