--- a/css/html_css_pratice.css
+++ b/css/html_css_pratice.css
@@ -27,7 +27,9 @@ p {
 .img {
     width: 100px;
     height: 100px;
-    background: url("../img/profile.jpg") no-repeat center/cover;
+    background:url("../img/profile.jpg") no-repeat;
+    background-position:center;
+    background-size:cover;
     border-radius: 50%;
 }
 
